--- a/0x0B-csharp-interfaces/1-user_interface/1-user_interface.csproj
+++ b/0x0B-csharp-interfaces/1-user_interface/1-user_interface.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>_0_abstract_thinking</RootNamespace>
-    <LangVersion>preview</LangVersion>
+    <RootNamespace>_1_user_interface</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
 
