--- a/0x0D-csharp-text_based_interface/InventoryLibrary/InventoryLibrary.csproj
+++ b/0x0D-csharp-text_based_interface/InventoryLibrary/InventoryLibrary.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="*"/>
+  </ItemGroup>
 </Project>
