--- a/0x0D-csharp-text_based_interface/InventoryLibrary/InventoryLibrary.csproj
+++ b/0x0D-csharp-text_based_interface/InventoryLibrary/InventoryLibrary.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="*"/>
+    <PackageReference Include="Microsoft.CSharp" Version="*"/>
   </ItemGroup>
 </Project>
